src/Tag/Tag.scss
@import '../common';

.tag {
  @include FontLight();
  background-color: $B40;
  border-radius: 100px;
  display: flex;
  align-items: center;
  padding: 2px 12px 2px 12px;
  margin-left: 12px;
  margin-top: 10px;
  margin-bottom: 10px;
  height: 24px;

  .thumb {
    margin-right: 5px;
  }

  .tagRemoveButton {
    cursor: pointer;
    padding-left: 10px;
    cursor: pointer;
    color: $B10;
    font-size: 14px;

    &:before {
      content: 'x';
    }
  }
}

.large {
  height: 36px;
}

